--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             justify-content: center;
             align-items: center;
             background: url('img/Pier.png') no-repeat center center/cover;
+            background-size: 80%;
             font-family: 'Arial', sans-serif;
         }
 
