--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             background: url('img/Pier.png') no-repeat center center/cover;
-   background-size: contain;
+            background-size: 45%;
             font-family: 'Arial', sans-serif;
         }
 
@@ -69,8 +69,8 @@
 </head>
 <body>
     <div>
-        <h1>MI Lunita < log3</h1>
-        <h2>Esto lo hize para ti </h2>
+        <h2>MI Lunita < log3</h2>
+        
         <button onclick="window.location.href='rosas.html'">No aprietes</button>
     </div>
 </body>
