--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
     <title>Mi amor</title>
     <style>
         body, html {
@@ -64,6 +65,12 @@
             50% {
                 transform: scale(1.05);
             }
+        }
+        .heart {
+            position: absolute;
+            font-size: 2em;
+            color: red;
+            animation: floatUp 3s linear infinite;
         }
     </style>
 </head>
